--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -16,9 +16,12 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y \
-            python3-pip openjdk-11-jdk git zip unzip \
+            python3-pip \
+            openjdk-11-jdk \
+            ant \
+            git zip unzip \
             zlib1g-dev libncurses5-dev libffi-dev liblzma-dev \
-            build-essential
+            build-essential wget
           pip3 install --upgrade buildozer cython
 
       - name: Build with Buildozer (auto-accept prompts)
