--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -24,8 +24,13 @@ jobs:
             build-essential wget
           pip3 install --upgrade buildozer cython
 
-      - name: Build with Buildozer (auto-accept prompts)
+      - name: Build with Buildozer (auto-accept prompts & use system Ant)
         run: |
+          # Point Buildozer at the system Ant installation
+          export ANT_HOME=/usr/share/ant
+          export PATH=$ANT_HOME/bin:$PATH
+
+          # Now run Buildozer (yes → auto-accept SDK/NDK licenses)
           yes | buildozer -v android debug
 
       - name: Upload APK
