--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches: [ main ]
 
-env:
-  # Tell Buildozer where we put the SDK 
-  ANDROID_SDK_ROOT: $HOME/android-sdk
-  ANDROID_HOME:      $HOME/android-sdk
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,39 +19,17 @@ jobs:
             python3-pip \
             openjdk-11-jdk \
             ant \
-            git zip unzip \
+            git \
+            zip unzip \
             zlib1g-dev libncurses5-dev libffi-dev liblzma-dev \
-            build-essential wget
+            build-essential
           pip3 install --upgrade buildozer cython
 
-      - name: Install Android SDK tools & Build-Tools 30.0.2
+      - name: Build with Buildozer (auto-accept everything)
         run: |
-          # Fetch and unpack cmdline-tools
-          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O clt.zip
-          unzip clt.zip -d $ANDROID_SDK_ROOT/cmdline-tools
-          mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
-
-          # Export into PATH so sdkmanager is visible
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
-
-          # Install only the SDK pieces we need
-          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
-            "platform-tools" \
-            "platforms;android-31" \
-            "build-tools;30.0.2"
-
-          # Accept all licenses
-          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-
-      - name: Build with Buildozer (full debug)
-        run: |
-          # Point Buildozer at our SDK & Ant
-          export ANDROID_HOME=$ANDROID_SDK_ROOT
-          export ANT_HOME=/usr/share/ant
-          export PATH=$ANT_HOME/bin:$PATH
-
-          buildozer --verbose --log-level=2 android debug
+          # Pipe "yes" into Buildozer so it accepts SDK/NDK licenses,
+          # downloads, etc., without stopping for input.
+          yes | buildozer -v android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
